<resources>
    <string name="app_name">neurON</string>
    <string name="todo">TODO</string>
    <string name="textview">Additional Notes</string>
    <string name="add_item">Add Item</string>
    <string name="tvAddTask">Add a Task</string>
    <string name="attach_an_image">Add Image</string>
    <string name="description">Information</string>
    <string name="title">Person/Task Name</string>
    <string name="tags">Additional Notes</string>
    <string name="Portions">Add Number of Portions Available</string>
    <string name="add_a_task">Add Person/Task Name</string>
    <string name="back">Go Back</string>
    <string name="Location">Phone Number/General Area</string>
    <string name="confirmation">Confirm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Sign in to neurON</string>
    <string name="logout">Logout</string>
    <string name="newacc">New User? Sign Up</string>
    <string name="confirm_sent">Congrats! You completed your task!</string>!
    <string name="exit">EXIT</string>
    <string name="uploads">Recents</string>
    <string name="request_text">Requests</string>
    <string name="dltpost">Delete Post</string>
    <string name="phoneno">Phone Number/General Area</string>
    <string name="about">About Dementia and Tips</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="aboutDescription">Dementia is a group of conditions that collectively affect a person’s memory and their ability to make decisions. There are over 50 million people who suffer from dementia and there are over 10 million new cases every year.</string>
    <string name="aboutDescription2">How can I help? While dementia is not a condition that can be completely cured, there are steps people can take to help:</string>
    <string name="aboutDescription3">- Keep their safety in mind</string>
    <string name="aboutDescription4">- Have a positive attitude around them</string>
    <string name="aboutDescription5">- Avoid overly stressing them out</string>
    <string name="aboutDescription6">- Communicate</string>
    <string name="aboutDescription7">- Be supportive</string>
</resources>
